Updating element IDs for CSS formatting

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -9,23 +9,26 @@
   </head>
   <body>
 
-    <img src="https://image.shutterstock.com/image-vector/synergy-word-cloud-450w-1176210484.jpg"
-    alt="SYNERGY" width=30%>
-    <img src="https://media.wiley.com/product_data/coverImage300/09/11186572/1118657209.jpg"
-    alt="halp" width=30%>
-    <img src="https://r.hswstatic.com/w_907/gif/luddites-podcast.png"
-    alt="percussive debug" width=30%>
+    <!-- Modify images based on their ID in CSS -->
+    <img id='Image1' src="https://image.shutterstock.com/image-vector/synergy-word-cloud-450w-1176210484.jpg"
+    alt="SYNERGY">
+    <img id='Image2'src="https://media.wiley.com/product_data/coverImage300/09/11186572/1118657209.jpg"
+    alt="halp">
+    <img id='Image3'src="https://r.hswstatic.com/w_907/gif/luddites-podcast.png"
+    alt="percussive debug">
 
-    <h1>SENG 401</h1>
+    <h1 id='MainHeader'>SENG 401</h1>
 
-    <section>
+    <section id='AboutUs'>
       <p>About us: paragraph about each of your team members containing name and photo</p>
     </section>
-    <section>
+    <section id='VisitorForm'>
       <p>Make form here for visitors to add title, phone, email, date, website, and message</p>
     </section>
-    
-    <p>Do a map thing. with circles.</p>
+    <section id='MapSection'>
+      <p>Do a map thing. with circles.</p>
+      <img id='WorldMap' src="assets/WorldMap.png" alt="World Map">
+    </section>
 
   </body>
 </html>
