--- a/AboutUs.html
+++ b/AboutUs.html
@@ -24,6 +24,12 @@
     </section>
     <section id='VisitorForm'>
       <p>Make form here for visitors to add title, phone, email, date, website, and message</p>
+      <form>
+        <p> First name </p> <br>
+        <input type = "text" name = "first name"> <br>
+        <p> Last name </p> <br>
+        <input type = "text" name = "last name"> <br>
+      </form>
     </section>
     <section id='MapSection'>
       <p>Do a map thing. with circles.</p>
