--- a/AboutUs.html
+++ b/AboutUs.html
@@ -50,7 +50,10 @@
     </section>
     <section id='MapSection'>
       <p>Do a map thing. with circles.</p>
-      <img id='WorldMap' src="assets/WorldMap.png" alt="World Map">
+      <img id='WorldMap' src="assets/WorldMap.png" alt="World Map" width="720" height="360">
+      <svg id='CalgCoord' width="100" height="100">
+        <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="no-fill" />
+      </svg>
     </section>
 
   </body>
