--- a/AboutUs.html
+++ b/AboutUs.html
@@ -12,10 +12,10 @@
   position: relative;
 }
 
-.CoordMarker {
+#CalgCoordMarker {
   position: absolute;
-  top: 0px;
-  left: 16px;
+  top: 27px;
+  left: 80px;
   font-size: 18px;
 }
 
@@ -66,8 +66,9 @@
 
     <section id='MapSection'>
       <img id='WorldMap' src="assets/WorldMap.png" alt="World Map" width="720" height="360">
-      <svg class='CoordMarker'>
-        <circle id='CalgCoordCircle' cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="none" />
+      <svg id='CalgCoordMarker'>
+        <a href='http://www.calgary.ca/'>
+        <circle id='CalgCoordCircle' cx="50" cy="50" r="2" stroke="red" stroke-width="0.5" fill="red" fill-opacity="0.1" />
       </svg>
     </section>
 
