--- a/AboutUs.html
+++ b/AboutUs.html
@@ -6,20 +6,7 @@
     <meta name="keywords" content="HTML">
     <meta name="author" content="Jesse Fowler">
     <title>SENG 401</title>
-    <style>
-
-#MapSection {
-  position: relative;
-}
-
-#CalgCoordMarker {
-  position: absolute;
-  top: 27px;
-  left: 80px;
-  font-size: 18px;
-}
-
-</style>
+    <link rel="stylesheet" href="style/style1.css">
   </head>
   <body>
 
