Updated images to be smaller, added ImgBanner class

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -11,11 +11,11 @@
   <body>
 
     <!-- Modify images based on their ID in CSS -->
-    <img id='Image1' src="https://image.shutterstock.com/image-vector/synergy-word-cloud-450w-1176210484.jpg"
+    <img class='ImgBanner' id='Image1' src="https://image.shutterstock.com/image-vector/synergy-word-cloud-450w-1176210484.jpg"
     alt="SYNERGY">
-    <img id='Image2'src="https://media.wiley.com/product_data/coverImage300/09/11186572/1118657209.jpg"
+    <img class='ImgBanner' id='Image2'src="https://media.wiley.com/product_data/coverImage300/09/11186572/1118657209.jpg"
     alt="halp">
-    <img id='Image3'src="https://r.hswstatic.com/w_907/gif/luddites-podcast.png"
+    <img class='ImgBanner' id='Image3'src="https://r.hswstatic.com/w_907/gif/luddites-podcast.png"
     alt="percussive debug">
 
     <h1 id='MainHeader'>SENG 401</h1>
