--- a/AboutUs.html
+++ b/AboutUs.html
@@ -28,7 +28,7 @@
         <p> First name </p> <br>
         <input type = "text" name = "first name"> <br>
         <p> Last name </p> <br>
-        <input type = "text" name = "last name"> <br>
+        <input type = "tel" name = "last name"> <br>
       </form>
     </section>
     <section id='MapSection'>
